[package]
name = "play"
version = "0.0.3"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a mean of playing audio files."
homepage = "https://github.com/stainless-steel/play"
repository = "https://github.com/stainless-steel/play"

[[bin]]
name = "play"
path = "src/main.rs"
doc = false

[dependencies]
ao-sys = "0.0"
libc = "0.2"
mpg123-sys = "0.0"
