[package]
name = "play"
version = "0.5.3"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a means of playing audio files."
documentation = "https://docs.rs/play"
homepage = "https://github.com/stainless-steel/play"
repository = "https://github.com/stainless-steel/play"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "sound"]

[features]
static = ["mpg123-sys/static", "out123-sys/static"]

[dependencies]
libc = "0.2"
mpg123-sys = "0.6"
out123-sys = "0.5"
